--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 
                 <img src="txtall.png" class="inner-text-img" alt="Branding CSS">
 
+                <!-- Text Reveal Images -->
+                <img src="locker_txt.png" class="center-txt" id="txt-locker" alt="Locker Text">
+                <img src="bento_txt.png" class="center-txt" id="txt-bento" alt="Bento Text">
+                <img src="camera_txt.png" class="center-txt" id="txt-camera" alt="Camera Text">
+                <img src="pencil_txt.png" class="center-txt" id="txt-pencil" alt="Pencil Text">
+                <img src="vase_txt.png" class="center-txt" id="txt-vase" alt="Vase Text">
+                <img src="slipper_txt.png" class="center-txt" id="txt-slipper" alt="Slipper Text">
+
+
                 <!-- Individual Items -->
                 <img src="locker.png" class="xray-item item-locker" alt="Locker">
                 <img src="bento.png" class="xray-item item-bento" alt="Bento">
